--- a/app/technician/jobs/jobs.css
+++ b/app/technician/jobs/jobs.css
@@ -93,15 +93,21 @@
   font-weight: bold;
   margin-bottom: 10px;
 }
-
+.submit-btn{
+  background-color: #28a745;
+}
+.cancel-btn{
+  background-color: red;
+}
 .modal-textarea {
-  width: 100%;
+  width: 92%;
   height: 80px;
   padding: 10px;
   margin-bottom: 15px;
   border-radius: 6px;
   border: 1px solid #ccc;
   resize: none;
+  margin-top: 20px;
 }
 
 .modal-actions {
