--- a/app/admin/achivment/achivment.css
+++ b/app/admin/achivment/achivment.css
@@ -132,4 +132,12 @@ background-color: #f7f9fc;
     flex-direction: column;
     align-items: center;
   }
+  .leaderboard-container {
+    background-color: #f7f9fc;
+    padding: 0px 0px;
+    min-height: calc(100vh - 60px);
+    box-sizing: border-box;
+    width: 100%;
+    margin-top: 44px;
+}
 }
