--- a/app/admin/dashboard/AdminDashboard.css
+++ b/app/admin/dashboard/AdminDashboard.css
@@ -26,6 +26,7 @@
   .admin-main {
     margin-left: 240px;
   }
+ 
 }
 
 .cards-wrapper {
@@ -41,12 +42,26 @@
   padding: 20px;
   border-radius: 10px;
   font-weight: bold;
-  min-width: 250px;
+  width: 250px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: white;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (max-width: 768px){
+ .card {
+  padding: 20px;
+  border-radius: 10px;
+  font-weight: bold;
+  width: 290px !important;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
 }
 
 .card-count {
