--- a/app/admin/dashboard/AdminDashboard.css
+++ b/app/admin/dashboard/AdminDashboard.css
@@ -132,4 +132,8 @@
 
 .loading {
   padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
