--- a/app/admin/completed/assignman.css
+++ b/app/admin/completed/assignman.css
@@ -51,3 +51,18 @@
     font-size: 14px;
     font-weight: 500;
 }
+.meicsdasw{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+@media only screen and (max-width: 600px) {
+    .job-card-status{
+        width: 100% !important;
+    }
+    .search-box{
+        width: 100% !important;
+        box-sizing: border-box;
+    }
+}
