--- a/app/admin/dashboard/AdminDashboard.css
+++ b/app/admin/dashboard/AdminDashboard.css
@@ -115,14 +115,17 @@
   padding: 12px;
   font-weight: 600;
   font-size: 14px;
-  background-color: #f8f8f8;
+  background-color: #2563eb;
   white-space: nowrap;
+  color: #fff;
 }
 
 .table-cell {
   padding: 10px 12px;
   font-size: 14px;
   white-space: nowrap;
+  background-color: #fbfafa;
+  border-bottom: 1px solid #fff;
 }
 
 .empty-message {
@@ -136,4 +139,23 @@
   justify-content: center;
   align-items: center;
   align-content: center;
+
+}
+.mystay{
+        background-color: #dcfce7;
+    display: inline-block;
+    padding: 5px 12px;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 600;
+    text-align: center;
+}
+/* in your AdminDashboard.css */
+.dashboard-link {
+  text-decoration: none !important;
+  display: block;
+  transition: transform 0.2s ease;
+}
+.dashboard-link:hover {
+  transform: scale(1.02);
 }
