--- a/app/staff/jobscreatebyme/jobcreateby.css
+++ b/app/staff/jobscreatebyme/jobcreateby.css
@@ -3,3 +3,12 @@
         margin-left: 0px !important;
     }
 }
+.mystay{
+    background-color: #dcfce7;
+    display: inline-block;
+    padding: 5px 12px;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 600;
+    text-align: center;
+}
