--- a/app/technician/dashboard/techdash.css
+++ b/app/technician/dashboard/techdash.css
@@ -5,6 +5,9 @@
     .newtech{
         padding: 20px 12px !important;
     }
+    .dashboard-link{
+        width: 100%;
+    }
 }
 .dashboard-link {
   text-decoration: none !important;
