--- a/app/staff/dashboard/newstaff.css
+++ b/app/staff/dashboard/newstaff.css
@@ -38,7 +38,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
   animation: pulse 1.5s infinite;
 }
 
