--- a/app/admin/alljob/all.css
+++ b/app/admin/alljob/all.css
@@ -16,3 +16,42 @@
      background-color: #fbfafa;
     border-bottom: 1px solid #fff;
 }
+.skeleton-line {
+  height: 12px;
+  width: 100%;
+  background: linear-gradient(90deg, #e0e0e0 25%, #f5f5f5 50%, #e0e0e0 75%);
+  background-size: 200% 100%;
+  animation: shimmer 1.3s infinite ease-in-out;
+  border-radius: 4px;
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
+.Edit{
+    background-color: #ddddde;
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    padding: 2px 8px;
+    margin-right: 5px;
+}
+.Edit svg{
+    width: 14px;
+}
+.detedd{
+    background-color: #ffe9e9;
+     border: none;
+    outline: none;
+    border-radius: 3px;
+    padding: 2px 8px;
+}
+.detedd svg{
+    width: 14px;
+    color: red;
+}
