--- a/app/admin/alljob/all.css
+++ b/app/admin/alljob/all.css
@@ -2,6 +2,9 @@
     .responvice{
         margin-left: 0px !important;
     }
+    .newall{
+  margin-left: 0px !important;
+}
 }
 .mystay{
         background-color: #dcfce7;
