--- a/app/admin/achivment/achivment.css
+++ b/app/admin/achivment/achivment.css
@@ -140,6 +140,9 @@ background-color: #f7f9fc;
     width: 100%;
     margin-top: 44px;
 }
+.leaderboard-container{
+  padding: 20px;
+}
 }
 .skeleton-row {
   display: flex;
