--- a/app/admin/rejected-jobs/reject.css
+++ b/app/admin/rejected-jobs/reject.css
@@ -2,6 +2,10 @@
     .mainrejede{
         margin-left: 0px !important;
     }
+    .rejected-main{
+      margin-left: 0px !important ;
+      padding: 50px 0px !important;
+    }
 }
 .rejected-container {
   display: flex;
